<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    android:padding="10dp"
    android:gravity="bottom"
    tools:context=".DeleteActivity">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/bin"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:src="@drawable/bin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:typeface="serif"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/your_post_has_been_successfully_deleted"/>
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/down_arrow_new" />

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/down_arrow_new" />

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/down_arrow_new" />
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_post_add_delete"
        android:typeface="serif"
        android:textAllCaps="false"
        android:text="@string/create_a_new_post"
        android:background="@drawable/rounded_button"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/or"/>
    <Button
        android:id="@+id/goToHomeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/go_to_home"
        android:textAllCaps="false"
        android:typeface="serif" />
</LinearLayout>