<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/photoa" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"
                android:maxLength="18"
                android:textColor="@color/text_color_grey"
                android:typeface="serif" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_description"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:minLines="2"
                android:textColor="@color/text_color_grey"
                android:typeface="serif" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/rent"
                android:inputType="number"
                android:textColor="@color/text_color_grey"
                android:typeface="serif" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/text_color_grey"
                android:typeface="serif" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:drawableRight="@drawable/ic_map_black_24dp"
            android:gravity="center"
            android:padding="15dp"
            android:hint="Add Location"
            android:textAlignment="textStart"
            android:textColor="@color/text_color_grey"
            android:typeface="serif"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/button_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="5"
            android:background="#FFFFFF"
            android:text="Choose Filters"
            android:textAlignment="center"
            android:textColor="@color/text_color_grey"
            android:textSize="15sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/button_addVisitTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:padding="15dp"
            android:hint="@string/pick_visit_date_time"
            android:textAlignment="textStart"
            android:textColor="@color/text_color_grey"
            android:typeface="serif"
            tools:ignore="RtlCompat" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/button_HidePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/hide_button"
                android:text="@string/hide_post"
                android:textColor="#FFFFFF"
                android:typeface="serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gap"
                android:textColor="#f9f9f9" />

            <Button
                android:id="@+id/button_deletePost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/delete_button"
                android:text="@string/delete_post"
                android:textColor="#FFFFFF"
                android:typeface="serif" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>