<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignInActivity">

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_person_outline_black_24dp"
            android:drawableRight="@drawable/ic_person_outline_black_24dp"
            android:hint="@string/text_username"
            android:inputType="text"
            android:typeface="serif" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_lock_outline_black_24dp"
            android:drawableRight="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:typeface="serif" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/sign_in_text"
        android:textAllCaps="false"
        android:textColor="@color/text_color_main"
        android:textSize="18sp"
        android:typeface="serif" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Forget Password?"
        android:layout_marginTop="20dp"
        android:id="@+id/forgetPasswordButton"
        android:textColor="@color/colorPrimaryDark"
        android:typeface="serif" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Don't have any account?"
            android:typeface="serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_dont_have_account"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@+id/text_dont_have_account"
            android:text="  Sign Up Here"
            android:id="@+id/textView_signUp"
            android:textColor="@color/colorPrimaryDark"
            android:typeface="serif" />
    </RelativeLayout>
</LinearLayout>