<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="10">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:hint="@string/title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="serif" />


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="20dp"
            android:layout_weight="4"
            android:background="@drawable/noimage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/detail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:drawableRight="@drawable/dollar"
                android:gravity="right"
                android:hint="500$"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/detail_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_map_black_24dp"
            android:hint="1280 rue saint marc"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:typeface="serif"
            android:visibility="gone" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/description"
            android:textSize="15sp"
            android:typeface="serif" />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerView_filter"
            android:visibility="visible"/>

        <Button
            android:id="@+id/detail_contactUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/contact_user"
            android:textColor="@color/color1"
            android:typeface="serif" />


        <Button

            android:id="@+id/detail_callUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/hide_button"
            android:clickable="false"
            android:text="Call"
            android:textColor="@color/color1"
            android:typeface="serif" />


    </LinearLayout>
</ScrollView>